--- a/register.html
+++ b/register.html
@@ -1,3 +1,52 @@
+<style>	
+.round{width:1em;height:1em;border:2px solid green;border-radius:50%;line-height:10em;text-align:center;background:#009e05}*{margin:0;padding:0}.form{width:300px;padding:32px;border-radius:10px;box-shadow:0 4px 16px #ccc;letter-spacing:1px}footer{background-color:#363636;position:absolute;left:0;bottom:0;color:#fff;width:100%;height:80px}.form_title{text-align:center;margin:0 0 32px;font-weight:400}.font_group{position:relative;margin-bottom:32px}.form_input{width:100%;padding:0 0 10px;border:none;border-bottom:1px solid #e0e0e0;background-color:transparent;outline:none;transition:.3s}.form_input:focus{border-bottom:1px solid #1a73a8}.form_input:hover{border-bottom:1px solid #1a73a8}.aHov{color:#000;transition:.3s}.aHov:hover{color:blue;transition:.3s}.form_button{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#00089e;outline:none;cursor:pointer;transition:.3s}.form_button:hover{font-size:20px;transition:.3s}.form_button_vk{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#000680;outline:none;cursor:pointer;transition:.3s}.form_button_vk:hover{font-size:20px;transition:.3s}.form_button_google{padding:10px 20px;border:none;border-radius:5px;color:#fff;background-color:#e34949;outline:none;cursor:pointer;transition:.3s}.form_button_google:hover{font-size:20px;transition:.3s}div.container4 p{margin:0;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%,-50%)}a{text-decoration:none}a.prevu{color:#fff}li{text-decoration:none;list-style:none}body{font-family:raleway,sans-serif;color:#505050;background-color:#f0f0f0}.logo{background-color:#363636;display:flex;justify-content:center}.graficloho{padding:5px;max-width:100%;box-sizing:border-box}nav{margin:auto;width:800px;height:100px}.navigate{background-color:#fff;font-size:14px;margin-top:40px}a.prevu1{color:#fff;text-align:center;padding:14px 16px;font-size:20px}a.icon{color:#000;font-size:20px}.homeQw{color:#000;text-align:center;padding:14px 16px;font-size:20px;border-bottom:2px solid #000}a.prevu1:hover{border-bottom:2px solid #fff;transition:.3s}
+  /* cyrillic-ext */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v17/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCFPrEHJA.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v17/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCMPrEHJA.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v17/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCHPrEHJA.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v17/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCGPrEHJA.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/raleway/v17/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrE.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+<style>	
 <!DOCTYPE html>
 <html lang="ru">
 <head>
